stat rewards added

--- a/EmpyrionPlaytimeRewarsShop_Client/EmpyrionPlaytimeRewarsShop_Client.csproj
+++ b/EmpyrionPlaytimeRewarsShop_Client/EmpyrionPlaytimeRewarsShop_Client.csproj
@@ -35,11 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mif">
-      <HintPath>..\..\..\Users\kwerner\source\repos\EmpyrionPlaytimeRewardsShop\dependencies\Mif.dll</HintPath>
+      <HintPath>..\dependencies\Mif.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ModApi">
-      <HintPath>..\..\..\Users\kwerner\source\repos\EmpyrionPlaytimeRewardsShop\dependencies\ModApi.dll</HintPath>
+      <HintPath>..\dependencies\ModApi.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
