--- a/EmpyrionPlaytimeRewarsShop_Client/configuration/Configuration.json
+++ b/EmpyrionPlaytimeRewarsShop_Client/configuration/Configuration.json
@@ -2,9 +2,8 @@
 	"ChatCommandPrefix":"/\\prs",
 	"RewardPeriodInMinutes":5,
 	"RewardPointsPerPeriod":10,
-	"RewardItems":
-	[
-		{"Name":"neo","Description":"Neodynium Ore","itemId":4300,"quantity":100,"price":100},
-		{"Name":"sath","Description":"Sathium Ore","itemId":4332,"quantity":100,"price":100}
-	]
+	"RewardItems":[
+	{"Name":"neo","Description":"Neodynium Ore","quantity":100,"price":100,"itemId":4300}],
+	"RewardStats":[
+	{"Name":"life","Description":"Health","quantity":100,"price":100,"maxStat":2000}]
 }
