--- a/EmpyrionPlaytimeRewarsShop_Client/packages.config
+++ b/EmpyrionPlaytimeRewarsShop_Client/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EmpyrionNetAPI" version="6.5.0" targetFramework="net48" />
   <package id="ILRepack" version="2.0.40" targetFramework="net48" developmentDependency="true" />
   <package id="ILRepack.Lib.MSBuild.Task" version="2.0.40" targetFramework="net48" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="YamlDotNet" version="12.0.0" targetFramework="net48" />
 </packages>
